--- a/index.html
+++ b/index.html
@@ -10,12 +10,34 @@
 <body>
     <div id="target" class="container">
         <div class="movie begin">
-            <h1 class="underline">TWBYD</h1>
-            An <h2> opinionated </h2>list of <h1> movies</h1> to <h2>watch </h2>before you <h1>die</h1>
-        </div>
-        <div class="movie end">
-            <h1 class="underline">TO BE CONTINUED</h1>
-        </div>
+            <div class="pres">
+                <div class="top">An <span class="small">opinionated</span> list <span clas="small">of</span> </div>
+                <div class="bottom">movies <span class="small">to</span></div>
+            </div>
+            <div class="title">
+            <div class="row">
+                <p class="letter">w</p>
+                <p class="w follow">atch</p>
+            </div>
+            <div class="row">
+                <p class="letter">b</p>
+                <p class="b follow">efore</p>
+            </div>
+            <div class="row">
+                <p class="letter">y</p>
+                <p class="y follow">ou</p>
+            </div>
+            <div class="row">
+                <p class="letter">d</p>
+                <p class="follow">ie</p>
+            </div>
+    </div>
+            <div class="about">ab out.</div>
+            </div>
+    </div>
+    <div class="movie end">
+        <h1 class="underline">TO BE CONTINUED</h1>
+    </div>
     </div>
 </body>
 
